--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "lodash.pick": "^4.4.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
